external-crates/move/crates/move-compiler/tests/move_check/parser/recovery_parse_member_mid_line_error.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/recovery_parse_member_mid_line_error.move:4:16
  │
4 │     public fun () foo
  │                ^
  │                │
  │                Unexpected '('
  │                Expected an identifier

error[E04007]: incompatible types
  ┌─ tests/move_check/parser/recovery_parse_member_mid_line_error.move:6:36
  │    
6 │         public fun wrong_return(): u64 {
  │                                    --- Expected: 'u64'
  │ ╭──────────────────────────────────────^
  │ │ ╭────────────────────────────────────'
7 │ │ │     }
  │ ╰─│─────^ Invalid return expression
  │   ╰─────' Given: '()'
